welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    if (tea=>2*candy || candy=>2*tea){
                     ^